--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "child-process-promise": "^2.2.1",
     "ini": "^1.3.5",
     "inquirer": "^4.0.2",
-    "log4js": "^2.4.1",
+    "log4js": "^2.9.0",
     "md5": "^2.2.1",
     "merge": "^1.2.0",
     "mocha": "^3.2.0",
     "moment": "^2.20.1",
     "mz": "^2.7.0",
     "options": "0.0.6",
-    "pkg": "^4.3.0-beta.5",
-    "request": "^2.74.0",
+    "pkg": "^4.3.2",
+    "request": "^2.87.0",
     "safe-buffer": "^5.1.1",
     "sywac": "^1.2.0",
     "untildify": "*"
